2005-08-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_sink_event):
	  Flush buffers in flush-stop, not flush-start, since the task is not
	  stopped yet in flush-stop, which may lead to odd crashes in random
	  places inside libavcodec.

2005-08-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/ffmpeg/gstffmpegcodecmap.c:
	  Fix template to not allow fps=0.

2005-08-05  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	* ext/ffmpeg/Makefile.am:
	* ext/ffmpeg/gstffmpeg.c: (plugin_init):
	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_caps_with_codecid):
	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_class_init),
	(gst_ffmpegdec_init), (gst_ffmpegdec_query), (gst_ffmpegdec_event),
	(gst_ffmpegdec_open), (gst_ffmpegdec_setcaps),
	(gst_ffmpegdec_get_buffer), (gst_ffmpegdec_negotiate),
	(gst_ffmpegdec_frame), (gst_ffmpegdec_sink_event),
	(gst_ffmpegdec_chain), (gst_ffmpegdec_change_state),
	(gst_ffmpegdec_register):
	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_class_init),
	(gst_ffmpegenc_init), (gst_ffmpegenc_getcaps),
	(gst_ffmpegenc_setcaps), (gst_ffmpegenc_chain_video),
	(gst_ffmpegenc_chain_audio):
	* ext/libpostproc/Makefile.am:
	  Backport BRANCH-THREADED to HEAD, fix a bit.

=== release 0.8.6 ===

2005-08-05  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* NEWS:
	* RELEASE:
	* configure.ac:
	  Release gst-ffmpeg 0.8.6 "Vamoz a la Playa".

2005-07-28  daniel fischer  <dan@f3c.com>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/ffmpeg/gstffmpegcodecmap.h:
	  Actually initialize value (#311802).

2005-07-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/ffmpeg/gstffmpegcodecmap.h:
	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_connect),
	(gst_ffmpegdec_frame), (gst_ffmpegdec_chain):
	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_loop):
	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_link),
	(gst_ffmpegenc_chain_video):